Name:                nox
Version:             0.0.1
Description:         Comment and uncomment text.
License:             OtherLicense
License-file:        LICENSE
Author:              Linus Arver
Maintainer:          linusarver@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable nox
  Main-is: nox.lhs
  Hs-source-dirs: src
  Ghc-options: -Wall -Werror -O2 -threaded -fno-warn-tabs
  Build-Depends: base >= 3
    , cmdargs >= 0.8
    , parsec >= 3.0.0
    , text >= 0.11.3.1
